# fpl-influencer-hivemind

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  PIPELINE-FLOW.md  README.md  fpl_data_aggregator.py  fpl_data_aggregator.sh  fpl_intelligence_analyzer.py  gameweek_2_analysis_EXAMPLE.md  noxfile.py  pyproject.toml
example_reports/: final_analysis_response.md
fpl/: README.md  __init__.py  get_current_gameweek.py  get_my_team.py  get_team_players.py  get_top_ownership.py  requirements.txt  utils.py
src/fpl_influencer_hivemind/: __init__.py  cli.py  pipeline.py  types.py
src/fpl_influencer_hivemind/analyzer/: __init__.py  api.py  cli.py  constants.py  models.py  normalization.py  orchestrator.py  quality.py  report.py  simple_models.py  simple_orchestrator.py
src/fpl_influencer_hivemind/analyzer/prompts/: extract_channel.txt  narrative_report.txt  normalize_key_issues.txt  normalize_names.txt
src/fpl_influencer_hivemind/analyzer/stages/: __init__.py  gap.py  lineup.py  transfer.py
src/fpl_influencer_hivemind/analyzer/validation/: __init__.py  cohesion.py  mechanical.py
src/fpl_influencer_hivemind/fpl/: __init__.py  get_current_gameweek.py  get_my_team.py  get_top_ownership.py  get_transfer_momentum.py  utils.py
src/fpl_influencer_hivemind/services/: __init__.py  discovery.py  fpl.py  transcripts.py
src/fpl_influencer_hivemind/transcripts/: __init__.py  fetcher.py  utils.py  youtube_transcript_io_fetcher.py
src/fpl_influencer_hivemind/youtube/: __init__.py  video_picker.py
test_ft_prompts/: FPL Focal_prompt.txt  FPL Focal_response.json  FPL Harry_prompt.txt  FPL Harry_response.json  FPL Mate_prompt.txt  FPL Mate_response.json  FPL Raptor_prompt.txt  FPL Raptor_response.json  Let's Talk FPL_prompt.txt  Let's Talk FPL_response.json  final_analysis_prompt.txt
tests/: __init__.py  test_cli.py  test_fpl_modules.py  test_main.py  test_orchestrator_options.py  test_pipeline.py  test_services.py  test_video_picker.py  test_youtube_transcript_io_fetcher.py
youtube-titles/: channels.json  fpl_video_picker.py  run_parallel_channels.sh  test_channels.txt  test_script.py  test_ytapi.py  test_ytdlp_basic.py
youtube-transcript/: README.md  fpl_transcript.py  requirements.txt  run_tests.py  test_transcript_fetcher.py  utils.py
